changed to use ArrayList<T> instead LinkedList<T> to improve performance